--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
-{
+{  "plugins": [
+  [
+    "@babel/plugin-transform-typescript",
+    {
+      "allowDeclareFields": true
+    }
+  ],
+  ["@babel/plugin-proposal-class-properties"],
+  ["@babel/plugin-proposal-optional-chaining"]
+],
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ]
 }
+
